R was updated to 4.0, now need to declare stringAsFactors when importing files. Update on power analysis for resubmission

--- a/190215_Paper2/190215_Paper2.Rmd
+++ b/190215_Paper2/190215_Paper2.Rmd
@@ -23,7 +23,7 @@ keywords:
 - risk
 - uncertainty
 - regime shifts
-lineno: yes
+
 linkcolor: blue
 urlcolor: blue
 header-includes:
@@ -64,7 +64,7 @@ load("Regressions_paper2_191107.RData")
 
 Sustainability challenges are often characterised by situations pervaded by thresholds [@Liu:2015go]. Achieving sustainable development goals such as eradicating poverty, dealing with climate change, and preventing the tragedy of the commons in using natural resources, require all cooperation to deal with situations characterised by non-linear dynamics with tipping points [@Vasconcelos:wz; @Rand:2013by; @Hauser:2014jg]. Under current development trajectories, ecosystems worldwide are at risk of undergoing more frequent and severe regime shifts --abrupt transitions in their function and structure-- changing the flow of ecosystem services on which societies rely upon, and the source of livelihoods for many communities [@IPCC:2013un; @Rocha:2018gn]. Examples include bush encroachment, a regime shift that reduces the ability of ranchers to maintain cattle; soil salinisation which compromises the ability of farmers to produce food; or the collapse of fisheries which could compromise the livelihoods of $\sim 51$ million people who today depend on them, most of them from developing countries [@FAO:2017ug]. Over 30 different types of regime shifts have been documented in social-ecological systems, and their frequency and intensity are expected to increase [@Rocha:2018gn; @Biggs:2018hx]. This rises the questions: how do people behave in situations pervaded by thresholds?  How does it affect their decisions regarding the extraction from a common-pool resource? Do people race to the bottom and collapse their resources, or do they find strategies for dealing with threshold uncertainty?
 
-Traditionally these questions have been studied from a rather theoretical point of view [@Crepin:ul; @Barrett:2012hm; @Milinski:2008ky; @Barrett:2013gc; @Polasky:2011p7155; @Hauser:2014jg] with a focus on public goods [@Dannenberg:2014ic]. Theoretical and empirical evidence suggests that the relationship between collective action and uncertainty is negative: the higher the uncertainty, the higher the likelihood of cooperation to break down [@Barrett:2012hm; @Dannenberg:2014ic; @Milinski:2008ky; @Gustafsson:1999ho; @Maldonado:2016ij]. However, some of these empirical results have been largely obtained in lab settings with "weird" subjects: western, educated, industrialised, rich, and democratic [@Henrich:2010gn]. Whether these results hold when tested with real resource users is still an open question.
+Traditionally these questions have been studied from a rather theoretical point of view [@Crepin:ul; @Barrett:2012hm; @Milinski:2008ky; @Barrett:2013gc; @Polasky:2011p7155; @Hauser:2014jg] with a strong focus on public goods [@McBride:2006bs; @Dannenberg:2014ic]. Theoretical and empirical evidence suggests that the relationship between collective action and uncertainty is negative: the higher the uncertainty, the higher the likelihood of cooperation to break down [@Barrett:2012hm; @Dannenberg:2014ic; @Milinski:2008ky; @Gustafsson:1999ho; @Maldonado:2016ij]. Only under very specific circumstances in public good settings, uncertainty has predicted increases in cooperation on a modeling framework [@McBride:2006bs] However, most of these empirical results have been largely obtained in lab settings with "weird" subjects: western, educated, industrialised, rich, and democratic [@Henrich:2010gn]. Whether these results hold when tested with real resource users is still an open question.
 
 The purpose of this paper is to fill that gap by testing how individual resource users behave in situations pervaded by thresholds when facing collective dilemmas. To achieve that goal we designed an experimental dynamic game that we played with 256 fishers in 4 coastal communities of the Colombian Caribbean (see methods and appendix for instructions). The game was framed as a fishery with the likelihood of a climate event that abruptly reduced the recovery rate of the fish stock on which the fishers' earnings depended. In the game, fishers made individual decisions each round of how much they wanted to fish from a common pool resource. Communication was allowed and the social dilemma was faced in groups of 4. The game lasted 16 rounds (unknown to the players), of which the last 10 consisted of a treatment. 64 fishers played the _threshold_ treatment, in which in round 7 a climate event occurred reducing the recovery rate of the fish. This framing is similar to hypoxia events --low water oxygen-- which could follow times of drought or extreme rain, and have been recorded in the region for decades [@Breitburg:2018iz]. In times of hypoxia fish die creating death zones [@Diaz:2008p199]. The second treatment was _risk_,  where fishers (n = 64) knew that a climate event could occur reducing the fish stock's ability to reproduce with a 50% chance. In the _uncertainty_ treatment (n = 64) the same framing was used, but the probability of the climate event was between 0.1-0.9. Another treatment was the control group (_baseline_, n = 64), which continued playing as in the first rounds. The game was complemented with post-experimental surveys and a lottery activity to elucidate the risk and ambiguity preferences of our participants (See Methods).
 
@@ -85,8 +85,8 @@ where $N$ is the number of players in the group (always 4 in our experimental de
 
 \begin{figure*}[h]
 \centering
-\includegraphics[width = 3in, height = 3in]{diff-in-diff}
-\caption{\textbf{Fishers fish less and cooperation does not break down} Treatment effects are explored with a difference-in-difference random effect model with respect to individual extraction, the proportion of the stock extracted, and cooperation. The differences between treatment and control groups are significant for individual extraction (F = 5.95, p $<<$ 0.05, df = 3), weakly significant for proportion of stock extracted (F = 2.23, p = 0.08), and non-significant for cooperation (F = 0.3, p = 0.8). Tables \ref{TabS1}-\ref{TabS3} complement this figure with a sensitivity analysis of robust standard error estimation.}
+\includegraphics[width = 4in, height = 4in]{diff-in-diff}
+\caption{\textbf{Fishers fish less and cooperation does not break down} Treatment effects are explored with a difference-in-difference random effect model with respect to individual extraction, the proportion of the stock extracted, and cooperation. The joint differences between control and treatment groups are significant for individual extraction (F = 5.95, p $<<$ 0.05, df = 3), weakly significant for proportion of stock extracted (F = 2.23, p = 0.08, df = 3), and non-significant for cooperation (F = 0.3, p = 0.8, df = 3). When the difference were tested individually between each treatment and the contorl, in the case of proportion of stock extracted, the weakly significant treatment was risk ($p = 0.08$), while threshold and uncertainty were both significant ($p = 0.02, 0.01$ respectively). Tables \ref{TabS1}-\ref{TabS3} complement this figure with a sensitivity analysis of robust standard error estimation.}
 \label{fig:fig1}
 \end{figure*}
 
@@ -112,15 +112,15 @@ We find that all treatments significantly reduced the proportion of stock extrac
 
 ## Discussion
 
-Fishers under uncertain thresholds maintained higher levels of cooperation than when the risk of thresholds was known, but risk had a stronger effect at reducing individual fishing effort than uncertainty. Our central result contradicts previous theoretical and empirical findings that predicted break down of cooperation under situations with uncertain thresholds [@Barrett:2012hm; @Dannenberg:2014ic; @Milinski:2008ky; @Maldonado:2016ij]. Previous work has concentrated their effots on theoretical studies or empirical settings with western, educated, industrialized, rich and democratic individuals [@Henrich:2010gn]. Here we empirically show that the negative relationship between cooperation and uncertainty does not hold in situations with real resource users whose livelihoods largely depend on natural resources. On the contrary, our study supports a small but growing body of empirical evidence suggesting that uncertainty can help protect the commons when ecosystems are susceptible to thresholds such as climate-induced regime shifts [@Schill:2019fa; @Finkbeiner:2018ds].
+Fishers under uncertain thresholds maintained higher levels of cooperation than when the risk of thresholds was known, but risk had a stronger effect at reducing individual fishing effort than uncertainty. Our central result contradicts previous theoretical and empirical findings that predicted break down of cooperation under situations with uncertain thresholds [@Barrett:2012hm; @Dannenberg:2014ic; @Milinski:2008ky; @Maldonado:2016ij]. Our findings supports the hypothesis that uncertainty can increase cooperative behavior in public goods settings when the value of the public good is sufficiently high [@McBride:2006bs]. Our experiment is not a public good setting, but it can be translated to a common pool resource when the dependency of the resource is sufficiently high. Previous work has concentrated their effots on settings with western, educated, industrialized, rich and democratic individuals [@Henrich:2010gn]. Here we empirically show that the negative relationship between cooperation and uncertainty does not hold in situations with real resource users whose livelihoods largely depend on natural resources. On the contrary, our study supports a small but growing body of empirical evidence suggesting that uncertainty can help protect the commons when ecosystems are susceptible to thresholds such as climate-induced regime shifts [@Schill:2019fa; @Finkbeiner:2018ds].
 
 One potential explanation for the deviation from theoretical expectations can be personality traits [@Ostrom:1998ve; @PoncelaCasasnovas:2016hs]. We expected that risk and ambiguity aversion were key personal traits affecting behaviour. Our results suggest however that group dynamics seems to override personal preferences regarding aversion. Some resource users tend to have pro-social and pro-enviromental behaviour, others have more individuallistic or short term preferences (Fig \ref{fig:fig2}); but as observed by a previous study in the same region, pro-social fishers are less likely of changing their behaviour than non-cooperators [@Maldonado:2016ij]. This in turn scale up at the group level, where groups with higher proportions of cooperative individuals maintain higher levels of fish stock despite an ocasional free-rider [@Maldonado:2016ij]. Our results suggest that fishers were responding more to in-group dynamics (e.g. increasing coordination) and personal preferences regarding pro-social behavior, rather than their risk or ambiguity aversion preferences.
 
-Our study shows that reaching agreements decrease fishing efforts and increase cooperation. It suggests that a common strategy that evolved in the game was approaching the threhsold wihtout crossing it, thus maximizing both social and individual benefits. By reducing fishing effort or keeping close to the social optimal people do cooperate. However, cooperation--as measured in our study--was not affected by our treatments. Cooperative behavior then seems to be driven more by personal preferences and group dynamics than levels of uncertainty. This observation agrees with previous experiments studying internal Nash solutions on common pool resources [@Maldonado:2016ij], and highlights the important and well established role of communication in providing groups an arena for agreement negotiations, rule making, social pressure, and coordinating actions [@Schill:2015kj].
+Our study shows that reaching agreements decrease fishing efforts and increase cooperation. It suggests that a common strategy that evolved in the game was approaching the threhsold wihtout crossing it, thus maximizing both social and individual benefits. By reducing fishing effort or keeping close to the social optimal people do cooperate. However, cooperation--as measured in our study--was not affected by our treatments. Cooperative behavior then seems to be driven more by personal preferences and group dynamics than levels of uncertainty. This observation agrees with previous experiments studying internal Nash solutions on common pool resources [@Maldonado:2016ij], and highlights the important and well established role of communication in providing groups an arena for agreement negotiations, rule making, social pressure, and coordinating actions [@Schill:2015kj; @Osborne:2019dd]. Previous participatory research in the communities studied supports with different methods our findings [@SaavedraDiaz:2016ig; @SaavedraDiaz:2015es]
 
 Fishers do reduce fishing in presence of thresholds, but the effect occurs to a lesser extent when uncertainty is high. This is partly due to our experimental desing where higher levels of uncertainty can mask free-riding behaviour and slow down the erosion of trust. In that sense, the uncertainty about thresholds also induces social uncertainty about adhering to agreements. An alternative explanation is that under higher levels of uncertainty fishers adopt a more exploratory mode (higher variance) with less strict agreements (Fig \ref{fig:fig2}). Reduced variance of decisions over time and incresed coordination across group members suggest that people with strong agreements (e.g. strict quotas) were more successful on maintaining the stock above the threshold than groups with soft agreements (e.g. "let's fish less"). Further research efforts could target dissentangling the effects of the different forms of uncertainty regarding the dynamics of the natural resources with pontential thresholds, the social uncertainty about free-riding, or the effects of norms ambiguity. As this type of experiments scale up to more realistic settings, noise induced by social network structures needs to be taken into consideration realizing that humans have limits to social interactions [@Dunbar:2003go], and that social relationships are heterogeneous in number and quality.
 
-If the existence of thresholds already triggers cooperative behavior in natural resource users, then communicating their potential effects on ecosystems and society is more important than quantifying the precise point at which ecosystems tip over. Tipping points are difficult to observe and quantify in nature, they are not unique and they are expected to interact with other tipping points [@Anonymous:2012ju; @Anonymous:2013ja], meaning that their exact points change over time. While precise measurements can be out of reach specially in settings where monitoring programs are weak or not in place (e.g. developing countries), knowledge about the circumstances under which an ecosystem can tip over can already trigger behavioral change for maintaining natural resources in configuration that provide crucial ecosystem services for livelihoods. In our case study, these circumstances are related with high concentrations of nutrients in water often correlated with use of fertalizers in agricultural activities, or periods of high sediment input following droughs and strong rainy seasons such as ENSO events [@Breitburg:2018iz; @Diaz:2008p199; @Vilardy:2011io]. Identifying such circumstances and communicating uncertain but potential regime shifts can mobilize social action towards sustainable behaviour in natural resource users.
+If the existence of thresholds already triggers cooperative behavior in natural resource users, then communicating their potential effects on ecosystems and society is more important than quantifying the precise point at which ecosystems tip over. Tipping points are difficult to observe and quantify in nature, they are not unique and they are expected to interact with other tipping points [@Anonymous:2012ju; @Lenton:2019fv; @Rocha:2018gn], meaning that their exact points change over time. While precise measurements can be out of reach specially in settings where monitoring programs are weak or not in place (e.g. developing countries), knowledge about the circumstances under which an ecosystem can tip over can already trigger behavioral change for maintaining natural resources in configuration that provide crucial ecosystem services for livelihoods. In our case study, these circumstances are related with high concentrations of nutrients in water often correlated with use of fertalizers in agricultural activities, or periods of high sediment input following droughs and strong rainy seasons such as ENSO events [@Breitburg:2018iz; @Diaz:2008p199; @Vilardy:2011io]. Identifying such circumstances and communicating uncertain but potential regime shifts can mobilize social action towards sustainable behaviour in natural resource users.
 
 
 # Methods {#methods}
@@ -132,6 +132,10 @@ Participants knew that the total duration of the workshop was $~3$hrs but they d
 We communicated _risk_ and _uncertainty_ with a ballot system to avoid deception. For _risk_, five green and five red stones were shown at the beginning of the round. We drew one stone in private. If it was red the climate event occurred and we calculated the reproduction rate at the end of the round accordingly. If the stone was green, we kept the reproduction scheme of the _baseline_. Thus, fishers could not know if the climate event happened if the remaining stock was above the threshold $\theta = 28$ since both reproduction schemes are identical for $S_{t} > 28$. For the _uncertainty_ treatment, we showed them ten red and ten green stones. We first took one stone of each colour and put them into an urn. The remaining 18 stones were mixed in another urn. Once mixed, 8 stones were moved to the first urn without revealing their colour, so neither experimenters or fishers knew the exact distributions of stones of the urn we later used to draw the climate event. All we knew was that the probability could be between 0.1 and 0.9 since for sure there was one green and one red stone in the urn. For the treatments _risk_ and _uncertainty_, we drew a stone every round regardless if the climate event occurred or not, and the stone was returned to the urn so each round had exactly the same odds.
 
 To make decisions in the game more realistic, each fisher earned \$COL500 (USD\$0.14) for each fish caught, in addition to a show-up fee (COL\$15000, USD\$4.3) meant to compensate for the time invested in the workshop. A day spent in the workshop meant for them a day without going fishing, so their average earnings were adjusted in a way that represented a typical working wage. The full instructions of the game (English version) are available in Appendix 1.
+
+#### Sample size and power analysis
+
+
 
 #### Surveys
 After the game, each fisher participated in a 56-question survey. The purpose of the survey was to better investigate the context of the fishing activities and to collect socioeconomic data important for helping to explain decisions in our regressions. The survey was divided into 5 sections. The first section was about the game and their perceptions on the activity, for example, whether they expected the game to end when it did. The second section was about their fishing habits: how much effort they put on fishing (time per day or year), how much earnings they get in a good or bad day, whether they own and share the fishing gear, whether they fish in groups, or what are the species targeted. The third section was about traditional ecological knowledge focused on questions about abrupt changes in their fishing grounds in the past and the type of strategies they have used to cope with it. The fourth section was about cooperative activities and associations in the community. The last section included questions about demographic socioeconomic data and sense of place. The full questionnaire is available in Appendix 2.
@@ -162,8 +166,11 @@ Given the nested structure of our design and that decisions in the past affect t
 We further explored what influences individual behaviour with an ordinary least squares approximation. As response variables we used summary statistics for the second part of the game (10 rounds), namely coordination, median cooperation, mean extraction, mean proportion of stock available extracted, and their variances (see Fig \ref{fig:figS1} for correlations between response variables). As regressors we used some socioeconomic variables from the survey, the proportion of rounds that groups reached agreements, a place term to account for place differences that were not accounted by socioeconomic factors, and the treatments.
 
 ## Acknowledgements
-We would like to thank the fisher communities that participated in our experiments. This work received valuable feedback on early stages of its design by Anne-Sophie Crépin, Therese Lindahl, Juan Camilo Cárdenas, Maria Alejandra Velez, and Sandra Vilardy. The field work would have not been possible without the support of Nidia Vanegas, Alisson Soche, Darlin Botto, María de los Ángeles González, Cristhian Marrugo, Gloria de León, Jaime González, and Jesús Jiménez. The research was supported by Formas grant XXX and 942-2015-731.
+We would like to thank the fisher communities that participated in our experiments. This work received valuable feedback on early stages of its design by Anne-Sophie Crépin, Therese Lindahl, Juan Camilo Cárdenas, Maria Alejandra Velez, and Sandra Vilardy. The field work would have not been possible without the support of Nidia Vanegas, Alisson Soche, Darlin Botto, María de los Ángeles González, Cristhian Marrugo, Gloria de León, Jaime González, and Jesús Jiménez. The research was supported by Formas grant 211-2013-1120 and 942-2015-731.
 
+
+## Data availability
+We will make annonymized data and code available upon publication in public repository servers (e.g. figshare, github). The development version of the code is available at https://github.com/juanrocha/BEST. Our study design followed the ethical regulation of Stockholm University and the Royal Swedish Academy of Sciences.
 
 # References
 
@@ -353,4 +360,7 @@ stargazer::stargazer(
 ```
 
 
+## Appendix 1. Game instructions
 
+
+## Appendix 2. Questionaire
